ecs_service.tf
resource "aws_ecs_service" "kipina_prod_v2_service" {
  name            = var.service_name
  cluster         = data.aws_ecs_cluster.kipina_existing_cluster.id # Reference existing cluster dynamically
  task_definition = aws_ecs_task_definition.kipina_prod_v2_task.arn
  desired_count   = var.desired_count
  launch_type     = "FARGATE"

  network_configuration {
    subnets = [
      data.aws_subnet.kipina_subnet_public_1.id,
      data.aws_subnet.kipina_subnet_public_2.id,
      data.aws_subnet.kipina_subnet_public_3.id 
    ]
    security_groups  = [aws_security_group.kipina_prod_v2_sg.id]
    assign_public_ip = true
  }

  load_balancer {
    target_group_arn = aws_lb_target_group.kipina_prod_v2_tg.arn
    container_name   = "kipina-prod-v2-container"
    container_port   = var.container_port
  }

  depends_on = [
    aws_iam_role_policy_attachment.ecs_task_execution_role_policy,
    aws_lb_listener.kipina_prod_v2_https_listener
  ]
}
